fix overflow problem on the main content

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@
     font-weight: 600;
 }
 
+.light-font {
+    font-weight: 100;
+}
+
 /* Header */
 .header {
     grid-area: header;
@@ -34,7 +38,7 @@
 }
 
 .header h1 {
-    font-size: 4.5rem;
+    font-size: 6rem;
 }
 
 .header a {
@@ -53,7 +57,7 @@
 }
 
 .header p {
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 /* Main content */
@@ -63,6 +67,7 @@
     background-color: #1e0d01;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 .tab-buttons {
@@ -93,7 +98,6 @@
     flex-direction: column;
     justify-content: center;
     align-self: center;
-    width: 50vw;
     height: 100vh;
 }
 
@@ -104,13 +108,13 @@
 .container-content {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-}
-
-.container-content .light-font {
-    font-weight: 100;
+    gap: 3rem;
 }
 
 .container-content ul {
     list-style: none;
+}
+
+#home-content .about-heading {
+    width: 70vw;
 }
